--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>Welcome to TXT by HTML5 UP</h2>
-						<p>A free responsive site template built on HTML5, CSS3, and some other stuff</p>
+						<h2>Dominique G. Maucieri</h2>
+						<p>PhD Student UVic, MSc UVic, BSc UCalgary</p>
 						<a href="#main" class="button scrolly">Alright let's go</a>
 					</div>
 				</section>
