--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				<section id="banner">
 					<div class="content">
 						<h2>Dominique G. Maucieri</h2>
-						<p>PhD Student UVic, MSc UVic, BSc UCalgary</p>
-						<a href="#main" class="button scrolly">Alright let's go</a>
+						<p style="color:white">PhD Student UVic, MSc UVic, BSc UCalgary</p>
+						<a href="#main" class="button scrolly">About Me</a>
 					</div>
 				</section>
 
