--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="publications.html">Publications</a></li>
+						<li><a href="research.html">Research</a></li>
+						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
 
