--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - TXT by HTML5 UP</title>
+		<title>Publications</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">About Me</a></li>
 						<li>
 							<a href="#">Dropdown</a>
 							<ul>
@@ -45,9 +45,9 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li class="current"><a href="publications.html">Publications</a></li>
+						<li><a href="research.html">Research</a></li>
+						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
 
@@ -127,7 +127,7 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>Left Sidebar</h2>
+												<h2>Publications</h2>
 												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
 												<ul class="meta">
 													<li class="icon fa-clock">5 days ago</li>
