adding banners and social media to all pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">About Me</a></li>
+						<li><a href="publications.html">Publications</a></li>
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="research.html">Research</a>
 							<ul>
 								<li><a href="#">Lorem ipsum dolor</a></li>
 								<li><a href="#">Magna phasellus</a></li>
@@ -35,8 +36,6 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="research.html">Research</a></li>
 						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
@@ -46,7 +45,6 @@
 					<div class="content">
 						<h2>Dominique G. Maucieri</h2>
 						<p style="color:white">PhD Student UVic, MSc UVic, BSc UCalgary</p>
-						<a href="#main" class="button scrolly">About Me</a>
 					</div>
 				</section>
 
@@ -58,11 +56,14 @@
 
 								<!-- Highlight -->
 									<section class="box highlight">
-										<ul class="special">
-											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a></li>
-											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a></li>
-											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a></li>
-											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a></li>
+										<ul class="contact">
+											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+											<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
+											<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
+											<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 										</ul>
 										<header>
 											<h2>A random assortment of icons in circles</h2>
