--- a/cv.html
+++ b/cv.html
@@ -14,22 +14,13 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<div class="logo container">
-						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
-						</div>
-					</div>
-				</header>
-
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">About Me</a></li>
+						<li><a href="publications.html">Publications</a></li>
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="research.html">Research</a>
 							<ul>
 								<li><a href="#">Lorem ipsum dolor</a></li>
 								<li><a href="#">Magna phasellus</a></li>
@@ -45,11 +36,12 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="research.html">Research</a></li>
 						<li class="current"><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
+
+			<!-- Banner -->
+					<section id="bannerbrady"></section>
 
 			<!-- Main -->
 				<section id="main">
@@ -220,11 +212,13 @@
 									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
 										<ul class="contact">
-											<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-											<li><a class="icon brands fa-instagram" href="#"><span class="label">Instagram</span></a></li>
-											<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-											<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+											<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
+											<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
+											<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 										</ul>
 									</section>
 
@@ -234,7 +228,7 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; Dominique G Maucieri. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
