adding research pages

--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
 						<li>
 							<a href="research.html">Research</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
+								<li><a href="phd_research.html">PhD Research</a></li>
+								<li><a href="masters_research.html">Masters Research</a></li>
+								<li><a href="SASC_research.html">SASC Internship</a></li>
+								<li><a href="undergrad_research.html">Undergraduate Research</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="bats_research.html">Bat Research</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
@@ -107,7 +103,7 @@
 										<p>
 											If you have any questions about my research or any of the labs I have been a part of, or if you just have graphic
 											design or coding questions, I would love to chat. Also, if you are interesting in me speaking to your class,
-											or providing a workshop get in touch, if I have the time I would love to. You can email me at
+											or providing a workshop, please get in touch, if I have the time I would love to. You can email me at
 											dominiquemaucieri "at" gmail.com or dominiquemaucieri "at" uvic.ca.
 										</p>
 
