--- a/publications.html
+++ b/publications.html
@@ -22,18 +22,14 @@
 						<li>
 							<a href="research.html">Research</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
+								<li><a href="phd_research.html">PhD Research</a></li>
+								<li><a href="masters_research.html">Masters Research</a></li>
+								<li><a href="SASC_research.html">SASC Internship</a></li>
+								<li><a href="undergrad_research.html">Undergraduate Research</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="bats_research.html">Bat Research</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
