--- a/research.html
+++ b/research.html
@@ -20,20 +20,17 @@
 					<ul>
 						<li><a href="index.html">About Me</a></li>
 						<li><a href="publications.html">Publications</a></li>
-						<li class="current"><a href="research.html">Research</a>
+						<li class="current">
+							<a href="research.html">Research</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
+								<li><a href="phd_research.html">PhD Research</a></li>
+								<li><a href="masters_research.html">Masters Research</a></li>
+								<li><a href="SASC_research.html">SASC Internship</a></li>
+								<li><a href="undergrad_research.html">Undergraduate Research</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="bats_research.html">Bat Research</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
@@ -43,24 +40,19 @@
 				<!-- Banner -->
 						<section id="bannerwhite"></section>
 
-			<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
-							<div class="col-9 col-12-medium">
-								<div class="content">
+						<section id="main">
+							<div class="container">
+								<div class="row">
+									<div class="col-12">
+										<div class="content">
 
-									<!-- Content -->
+											<!-- Content -->
 
-										<article class="box page-content">
+												<article class="box page-content">
 
 											<header>
-												<h2>Research</h2>
+												<h2>My Research Experience</h2>
 												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
-												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
-												</ul>
 											</header>
 
 											<section>
@@ -73,136 +65,10 @@
 												</p>
 											</section>
 
-											<section>
-												<h3>More intriguing information</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.
-												</p>
-												<p>
-													Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
-
-											<section>
-												<h3>So in conclusion ...</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae.
-												</p>
-												<p>
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
-
 										</article>
 
 								</div>
 							</div>
-							<div class="col-3 col-12-medium">
-								<div class="sidebar">
-
-									<!-- Sidebar -->
-
-									<!-- Highlight -->
-										<section class="box highlight">
-											<ul class="contact">
-												<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-												<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
-												<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-												<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-											</ul>
-										</section>
-
-										<!-- Recent Posts -->
-											<section>
-												<h2 class="major"><span>Recent Posts</span></h2>
-												<ul class="divided">
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">A Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">6 hours ago</li>
-																<li class="icon fa-comments"><a href="#">34</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">Another Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">9 hours ago</li>
-																<li class="icon fa-comments"><a href="#">27</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">And Another</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">Yesterday</li>
-																<li class="icon fa-comments"><a href="#">184</a></li>
-															</ul>
-														</article>
-													</li>
-												</ul>
-												<a href="#" class="button alt">Arcives</a>
-											</section>
-
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Ipsum Dolore</span></h2>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<p>
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
-
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Magna Feugiat</span></h2>
-												<p>
-													Rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
-
-								</div>
-							</div>
-							<div class="col-12">
 
 								<!-- Features -->
 									<section class="box features">
@@ -260,12 +126,6 @@
 															</p>
 														</section>
 
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
-													</ul>
 												</div>
 											</div>
 										</div>
