adding bat images

--- a/bats_research.html
+++ b/bats_research.html
@@ -31,7 +31,7 @@
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
@@ -105,6 +105,13 @@
       p.indent {
           text-indent: 30px;
       }
+
+			.center {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
   </style>
   </head>
 	<body class="is-preload">
@@ -158,22 +165,96 @@
 
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="images/pic01.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <div class="numbertext">1 / 13</div>
+                            <img src="images/bats/DominiqueMaucieri_bats1.jpg" style="height:800px" class="center">
+                            <div class="text">Little Brown bat (<em>Myotis lucifugus</em>) just hanging
+														out (Calgary, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
-                            <div class="numbertext">2 / 3</div>
-                            <img src="images/pic02.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <div class="numbertext"> 2 / 13</div>
+                            <img src="images/bats/DominiqueMaucieri_bats2.jpg" style="height:600px" class="center">
+                            <div class="text">Thomas's fruit-eating bat (<em>Dermanura watsoni</em>) from Lamanai (Belize)
+														- &copy; Erica Born</div>
                           </div>
 
-                          <div class="mySlides fade">
-                            <div class="numbertext">3 / 3</div>
-                            <img src="images/pic03.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
-                          </div>
+													<div class="mySlides fade">
+														<div class="numbertext"> 3 / 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats3.jpg" style="height:800px" class="center">
+														<div class="text">Great Fruit-eating bat (<em>Artibeus lituratus</em>) from
+														Lamanai (Belize) <br \> - &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 4/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats4.jpg" style="height:700px" class="center">
+														<div class="text">Jamaican fruit bat (<em>Artibeus jamacensis</em>) found at Kakabiche archiological site (Belize) <br \>
+														- &copy; Dominique G. Maucieri </div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 5/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats5.jpg" style="height:800px" class="center">
+														<div class="text">Proboscis bat (<em>Rhynchonycteris naso</em>) found roosting under the <br \>
+														dock (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 6/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats6.jpg" style="height:800px" class="center">
+														<div class="text">A shy Little Brown bat (<em>Myotis lucifugus</em>) caught in Calgary (Alberta) <br \>
+														- &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 7/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats7.jpg" style="height:800px" class="center">
+														<div class="text">Long-eared Myotis (<em>Myotis evotis</em>) from Kananaskis (Alberta) <br \>
+														- &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 8/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats8.jpg" style="height:800px" class="center">
+														<div class="text">Two Long-eared Myotis's (<em>Myotis evotis</em>) on my hand (Kananaskis, Alberta) <br \>
+														- &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 9 / 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats9.jpg" style="height:800px" class="center">
+														<div class="text">The Silver-haired bat (<em>Lasionycteris noctivagans</em>) my favorite <br \>
+														bat (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 10/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats10.jpg" style="height:800px" class="center">
+														<div class="text">Hoary bat's (<em>Lasiurus cinereus</em>) wing (Calgary, Alberta) <br \>
+														- &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 11/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats11.jpg" style="height:800px" class="center">
+														<div class="text">A Little Brown bat (<em>Myotis lucifugus</em>) and I (Calgary, Alberta) <br \>
+															- &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 12/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats12.jpg" style="height:800px" class="center">
+														<div class="text">A Little Brown bat (<em>Myotis lucifugus</em>) showing off their <br \>
+															teeth (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
+													</div>
+
+													<div class="mySlides fade">
+														<div class="numbertext"> 13/ 13</div>
+														<img src="images/bats/DominiqueMaucieri_bats13.jpg" style="height:800px" class="center">
+														<div class="text">Beautiful Big Brown bat (<em>Eptesicus fuscus</em>) caught using a <br \>
+														mist net (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
+													</div>
+
 
                           <!-- Next and previous buttons -->
                           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -186,6 +267,16 @@
                           <span class="dot" onclick="currentSlide(1)"></span>
                           <span class="dot" onclick="currentSlide(2)"></span>
                           <span class="dot" onclick="currentSlide(3)"></span>
+													<span class="dot" onclick="currentSlide(4)"></span>
+													<span class="dot" onclick="currentSlide(5)"></span>
+													<span class="dot" onclick="currentSlide(6)"></span>
+													<span class="dot" onclick="currentSlide(7)"></span>
+													<span class="dot" onclick="currentSlide(8)"></span>
+													<span class="dot" onclick="currentSlide(9)"></span>
+													<span class="dot" onclick="currentSlide(10)"></span>
+													<span class="dot" onclick="currentSlide(11)"></span>
+													<span class="dot" onclick="currentSlide(12)"></span>
+													<span class="dot" onclick="currentSlide(13)"></span>
                         </div>
 
                         <script>
