--- a/research.html
+++ b/research.html
@@ -51,8 +51,8 @@
 												<article class="box page-content">
 
 											<header>
-												<h2>My Research Experience</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>My Research</h2>
+												<p>Multiple stressor interactions and their effects on marine invertebrate communities</p>
 											</header>
 
 											<section>
@@ -72,7 +72,7 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>Previous Research</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
@@ -118,11 +118,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
+															<a href="bats_research.html" class="image featured"><img src="images/bats/DominiqueMaucieri_bats1.jpg" alt="" /></a>
+															<h3><a href="bats_research.html">Bats</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																During my undergraduate degree, I was able to conduct two honours
+																research projects, both of which were on bats.
 															</p>
 														</section>
 
