adding text to research page

--- a/research.html
+++ b/research.html
@@ -52,16 +52,16 @@
 
 											<header>
 												<h2>My Research</h2>
-												<p>Multiple stressor interactions and their effects on marine invertebrate communities</p>
+												<h3><a href="phd_research.html">Multiple stressor interactions and their effects
+													on marine invertebrate communities</a></h3>
 											</header>
 
 											<section>
-												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
+												<a href="phd_research.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 												<p>
-													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.
+													For my PhD I am working in the Bates lab at the University of Victoria, and I will be
+													focusing on how multiple stressors interact (e.g., marine heatwaves, deoxygenation
+													and human actions) and affect various aspects of coral and rocky reef communities.
 												</p>
 											</section>
 
@@ -79,11 +79,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<a href="masters_research.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<h3><a href="masters_research.html">Master's Research</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																For my Master's, I was a part of the Baum Lab at the University of Victoria and I
+																examined the impacts of local and global disturbances on coral biodiversity
 															</p>
 														</section>
 
@@ -92,11 +92,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
+															<a href="SASC_research.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+															<h3><a href="SASC_research.html">SASC Internship</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																I had the opportunity to spend a month in Hermanus, South Africa as an
+																intern with the South African Shark Conservancy.
 															</p>
 														</section>
 
@@ -105,11 +105,13 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
+															<a href="undergrad_research.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<h3><a href="undergrad_research.html">Undergraduate Research</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Thoughout my undergraduate degree, I had the opportunity to be involved in
+																many research projects though my courses and summer employment. These projects
+																ranged from chlorophyll to crocodiles and provided me the skills to continue
+																on in academia to pursue a MSc and eventually a PhD.
 															</p>
 														</section>
 
