adding phd images

--- a/phd_research.html
+++ b/phd_research.html
@@ -105,6 +105,13 @@
       p.indent {
           text-indent: 30px;
       }
+
+			.center {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
   </style>
   </head>
 	<body class="is-preload">
@@ -160,20 +167,22 @@
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
-                            <img src="images/pic01.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <img src="images/phd/DominiqueMaucieri_phd1.jpg" style="width:100%">
+                            <div class="text">Maben's Beach (Vancouver Island, Canada) with a forest of sea palms (<em>Postelsia palmaeformis</em>) <br \>
+														- &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
-                            <img src="images/pic02.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <img src="images/phd/DominiqueMaucieri_phd2.jpg"  style="height:700px" class="center">
+                            <div class="text">I'm smiling before a Reef Life Survey dive <br \>
+															in Bamfield (Canada) - &copy; Valesca de Groot</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext">3 / 3</div>
-                            <img src="images/pic03.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
+                            <img src="images/phd/DominiqueMaucieri_phd3.jpg" style="width:100%">
+                            <div class="text">Making sure my kit is set up (Bamfield, Canada) - &copy; Valesca de Groot</div>
                           </div>
 
                           <!-- Next and previous buttons -->
