--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
 											</header>
 
 											<section>
-												<a href="phd_research.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+												<a href="phd_research.html" class="image featured"><img src="images/DominiqueMaucieri_kelp.jpg" alt="" /></a>
 												<p>
 													For my PhD I am working in the Bates lab at the University of Victoria, and I will be
 													focusing on how multiple stressors interact (e.g., marine heatwaves, deoxygenation
