adding phd images

--- a/phd_research.html
+++ b/phd_research.html
@@ -176,7 +176,7 @@
                             <div class="numbertext">2 / 3</div>
                             <img src="images/phd/DominiqueMaucieri_phd2.jpg"  style="height:700px" class="center">
                             <div class="text">I'm smiling before a Reef Life Survey dive <br \>
-															in Bamfield (Canada) - &copy; Valesca de Groot</div>
+															in Bamfield (Canada) a- &copy; Valesca de Groot</div>
                           </div>
 
                           <div class="mySlides fade">
