--- a/SASC_research.html
+++ b/SASC_research.html
@@ -31,7 +31,7 @@
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
@@ -105,6 +105,13 @@
       p.indent {
           text-indent: 30px;
       }
+
+			.center {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
   </style>
   </head>
 	<body class="is-preload">
@@ -159,21 +166,43 @@
 
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="images/pic01.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <div class="numbertext">1 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC1.jpg" style="width:100%">
+                            <div class="text">Leopard catshark (<em>Poroderma pantherinum</em>) being measured <br \>
+														measured (Hermanus, South Africa) - &copy; Aaron Judah</div>
                           </div>
 
                           <div class="mySlides fade">
-                            <div class="numbertext">2 / 3</div>
-                            <img src="images/pic02.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <div class="numbertext">2 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC2.jpg" style="width:100%">
+                            <div class="text">Hermanus at sunset (South Africa) - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
-                            <div class="numbertext">3 / 3</div>
-                            <img src="images/pic03.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
+                            <div class="numbertext">3 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC3.jpg" style="height:700px" class="center">
+                            <div class="text">Leopard catshark (<em>Poroderma pantherinum</em>) and I <br \>
+															- &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">4 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC4.jpg" style="width:100%">
+                            <div class="text">Beach clean up (Hermanus, South Africa) - &copy; Alicia Hendry</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">5 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC5.jpg" style="height:700px" class="center">
+                            <div class="text">Me and a leopard catshark (<em>Poroderma pantherinum</em>), the first shark <br \>
+														I caught (Hermanus, South Africa) - &copy; Aaron Judah</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">6 / 6</div>
+                            <img src="images/sasc/DominiqueMaucieri_SASC6.jpg" style="height:700px" class="center">
+                            <div class="text">Catshark eggs aka mermaids purses (South Africa) <br \ >
+															- &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <!-- Next and previous buttons -->
@@ -187,6 +216,9 @@
                           <span class="dot" onclick="currentSlide(1)"></span>
                           <span class="dot" onclick="currentSlide(2)"></span>
                           <span class="dot" onclick="currentSlide(3)"></span>
+													<span class="dot" onclick="currentSlide(4)"></span>
+													<span class="dot" onclick="currentSlide(5)"></span>
+													<span class="dot" onclick="currentSlide(6)"></span>
                         </div>
 
                         <script>
