--- a/masters_research.html
+++ b/masters_research.html
@@ -105,6 +105,13 @@
       p.indent {
           text-indent: 30px;
       }
+
+			.center {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
   </style>
   </head>
 	<body class="is-preload">
@@ -160,20 +167,20 @@
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
-                            <img src="images/pic01.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <img src="images/msc/DominiqueMaucieri_msc1.jpg" style="width:100%">
+                            <div class="text">Kiritimati Corals - &copy; The Baum Lab</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
-                            <img src="images/pic02.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <img src="images/msc/DominiqueMaucieri_msc2.jpg" style="height:700px" class="center">
+                            <div class="text" style="color:black">Soft Corals on Kiritimati - &copy; Maucieri and Baum 2021</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext">3 / 3</div>
-                            <img src="images/pic03.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
+                            <img src="images/msc/DominiqueMaucieri_msc3.jpg" style="height:700px" class="center"">
+                            <div class="text">Me convocating - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <!-- Next and previous buttons -->
