adding BSc photos

--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="masters_research.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<a href="masters_research.html" class="image featured"><img src="images/msc/DominiqueMaucieri_msc1.jpg" alt="" /></a>
 															<h3><a href="masters_research.html">Master's Research</a></h3>
 															<p>
 																For my Master's, I was a part of the Baum Lab at the University of Victoria and I
@@ -92,7 +92,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="SASC_research.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+															<a href="SASC_research.html" class="image featured"><img src="images/sasc/DominiqueMaucieri_SASC1.jpg" alt="" /></a>
 															<h3><a href="SASC_research.html">SASC Internship</a></h3>
 															<p>
 																I had the opportunity to spend a month in Hermanus, South Africa as an
@@ -105,13 +105,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="undergrad_research.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<a href="undergrad_research.html" class="image featured"><img src="images/bsc/DominiqueMaucieri_bsc1.jpg" alt="" /></a>
 															<h3><a href="undergrad_research.html">Undergraduate Research</a></h3>
 															<p>
 																Thoughout my undergraduate degree, I had the opportunity to be involved in
-																many research projects though my courses and summer employment. These projects
-																ranged from chlorophyll to crocodiles and provided me the skills to continue
-																on in academia to pursue a MSc and eventually a PhD.
+																many research projects though my courses and summer employment. 
 															</p>
 														</section>
 
