--- a/undergrad_research.html
+++ b/undergrad_research.html
@@ -105,6 +105,13 @@
       p.indent {
           text-indent: 30px;
       }
+
+			.center {
+					display: block;
+					margin-left: auto;
+					margin-right: auto;
+			}
+
   </style>
   </head>
 	<body class="is-preload">
@@ -158,22 +165,199 @@
 
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="images/pic01.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <div class="numbertext">1 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc2.jpg" style="height:700px" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) female (Smithers, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
-                            <div class="numbertext">2 / 3</div>
-                            <img src="images/pic02.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <div class="numbertext">2 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc3.jpg" style="width:100%">
+                            <div class="text">The Hudson Bay Mountain (Smithers, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
-                            <div class="numbertext">3 / 3</div>
-                            <img src="images/pic03.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
+                            <div class="numbertext">3 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc4.jpg" style="height:700px" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nestling and me (Smithers, Canada) <br \>
+														- &copy; Devin De Zwaan</div>
                           </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">4 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc5.jpg" style="height:700px" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nest (Smithers, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">5 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc6.jpg" style="height:700px" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) male caught with a bowline trap <br \>
+														(Smithers, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">6 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc7.jpg" style="height:700px" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nestlings (Smithers, Canada) <br \>
+															 - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">7 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc8.jpg" style="width:100%">
+                            <div class="text">Ecology 413 class</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">8 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc9.jpg" style="height:700px" class="center">
+                            <div class="text">Three spined sticklebacks (<em>Gasterosteus aculeatus</em>) from <br \>
+															Barrier Lake (Kananaskis, Canada) = &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">9 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc10.jpg" style="width:100%">
+                            <div class="text">Retention stands after a clear cut (Kananaskis, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">10 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc11.jpg" style="width:100%">
+                            <div class="text">Barrier Lake (Kananaskis, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">11 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc12.jpg" style="width:100%">
+                            <div class="text">Biology of Seaweeds class</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">12 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc13.jpg" style="width:100%">
+                            <div class="text">Ross Ist. (Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">13 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc14.jpg" style="width:100%">
+                            <div class="text">Hannah and I collecting Giant Kelp (<em>Macrocystis pyrifera</em>) for our
+															research project (Bamfield, Canada) - &copy; April Houwelling</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">14 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc15.jpg" style="width:100%">
+                            <div class="text">California Sea Cucumber (<em>Apostichopus californicus</em>) found during a trawl
+															(Bamfield, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">15 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc16.jpg" style="width:100%">
+                            <div class="text">Seaweed collecting (Bamfield, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">16 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc17.jpg" style="width:100%">
+                            <div class="text" style="color:black">Dead men's fingers (<em>Codium fragile</em>) herbarium press in the making <br \>
+														(Bamfield, Canada) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">17 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc18.jpg" style="height:700px" class="center">
+                            <div class="text">Feather boa kelp (<em>Egregia menziesii</em>) and muself (Bamfield, Canada) <br \>
+														- &copy; Hannah Avenant</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">18 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc19.jpg" style="width:100%">
+                            <div class="text">Scraping rocks at ACWA's experimental streams - &copy; ACWA</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">19 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc20.jpg" style="width:100%">
+                            <div class="text">Aaron and I preparing ash free dry mass samples at ACWA (Calgary, Canada) - &copy; ACWA</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">20 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc21.jpg" style="height:700px" class="center">
+                            <div class="text">The experimental streams at ACWA (Calgary, Canada) <br \>
+														- &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">21 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc22.jpg" style="width:100%">
+                            <div class="text" style="color:black">Me preparing ash free dry mass samples at ACWA (Calgary, Canada) - &copy; ACWA</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">22 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc23.jpg" style="height:700px" class="center">
+                            <div class="text">Scraping "rock scum" off of rocks at ACWA (Calgary, Canada)<br \>
+															- &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">23 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc24.jpg" style="width:100%">
+                            <div class="text">Belize Field Course class</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">24 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc25.jpg" style="width:100%">
+                            <div class="text">The view from the High Temple (Lamanai, Belize) - &copy; Robert M.R. Barclay</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">25 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc26.jpg" style="width:100%">
+                            <div class="text">Black Howler Monkey (<em>Alouatta caraya</em>) climbing down its tree (Lamanai, Belize)
+														- &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">26 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc27.jpg" style="width:100%">
+                            <div class="text">Leaf cutter ands (<em>Atta</em> sp.) working hard (Lamanai, Belize) - &copy;
+															Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">27 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc28.jpg" style="height:700px" class="center">
+                            <div class="text">Scorpions are fluorescent (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">28 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc29.jpg" style="width:100%">
+                            <div class="text">Walking across the High Temple before setting up nets to catch bats (Lamanai, Belize) <br \>
+														- &copy; Mike Tytula</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">29 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc30.jpg" style="height:700px" class="center">
+                            <div class="text">The view from the lodge (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
+                          </div>
+
+													<div class="mySlides fade">
+                            <div class="numbertext">30 / 30</div>
+                            <img src="images/bsc/DominiqueMaucieri_bsc1.jpg" style="height:700px" class="center">
+                            <div class="text">Morelet's Crocodile (<em>Crocodylus moreletii</em>) we caught as <br \>
+														part of a capture-mark-recapture study (Lamanai, Belize) - &copy; Liam Horne</div>
+                          </div>
+
 
                           <!-- Next and previous buttons -->
                           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -186,6 +370,33 @@
                           <span class="dot" onclick="currentSlide(1)"></span>
                           <span class="dot" onclick="currentSlide(2)"></span>
                           <span class="dot" onclick="currentSlide(3)"></span>
+													<span class="dot" onclick="currentSlide(4)"></span>
+													<span class="dot" onclick="currentSlide(5)"></span>
+													<span class="dot" onclick="currentSlide(6)"></span>
+													<span class="dot" onclick="currentSlide(7)"></span>
+													<span class="dot" onclick="currentSlide(8)"></span>
+													<span class="dot" onclick="currentSlide(9)"></span>
+													<span class="dot" onclick="currentSlide(10)"></span>
+													<span class="dot" onclick="currentSlide(11)"></span>
+													<span class="dot" onclick="currentSlide(12)"></span>
+													<span class="dot" onclick="currentSlide(13)"></span>
+													<span class="dot" onclick="currentSlide(14)"></span>
+													<span class="dot" onclick="currentSlide(15)"></span>
+													<span class="dot" onclick="currentSlide(16)"></span>
+													<span class="dot" onclick="currentSlide(17)"></span>
+													<span class="dot" onclick="currentSlide(18)"></span>
+													<span class="dot" onclick="currentSlide(19)"></span>
+													<span class="dot" onclick="currentSlide(20)"></span>
+													<span class="dot" onclick="currentSlide(21)"></span>
+													<span class="dot" onclick="currentSlide(22)"></span>
+													<span class="dot" onclick="currentSlide(23)"></span>
+													<span class="dot" onclick="currentSlide(24)"></span>
+													<span class="dot" onclick="currentSlide(25)"></span>
+													<span class="dot" onclick="currentSlide(26)"></span>
+													<span class="dot" onclick="currentSlide(27)"></span>
+													<span class="dot" onclick="currentSlide(28)"></span>
+													<span class="dot" onclick="currentSlide(29)"></span>
+													<span class="dot" onclick="currentSlide(30)"></span>
                         </div>
 
                         <script>
@@ -217,7 +428,7 @@
                           }
                           </script>
                       <p>
-                        Thoughout my undergraduate degree, I had the opportunity to be involved in
+                        Throughout my undergraduate degree, I had the opportunity to be involved in
                         many research projects though my courses and summer employment. These projects
                         ranged from chlorophyll to crocodiles and provided me the skills to continue on
                         in academia to pursue a MSc and eventually a PhD.
