adding main page about me section

--- a/index.html
+++ b/index.html
@@ -73,14 +73,31 @@
 
 						<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<a href="#" class="image featured"><img src="images/DominiqueMaucieri.jpg" alt="" /></a>
+															<h3><a href="#">About Me</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																I am a PhD student in Biology at the University of Victoria, working in the Bates Lab.
+																I am examining how multiple stressors interact (e.g., marine heatwaves, deoxygenation
+																and human actions) and affect various aspects of coral and rocky reef communities. My
+																aim will be to examine these factors using a hierarchical framework (i.e., spatial,
+																temporal and experimental).
+															</p>
+ 															<p>
+																I have a Bachelor's degree in Ecology and Zoology from the University of Calgary and
+																a Master's degree from the University of Victoria. During my MSc, I worked in the
+																Baum Lab, examining local and global disturbances on coral biodiversity on
+																Kiritimati Island (Christmas Island). I love teaching others about the mystery
+																of the oceans and helping others to see ways that they can impact their oceans
+																for the better.
 															</p>
 														</section>
-
+														<div class="col-12">
+															<ul class="actions">
+																<li><a href="publications.html" class="button large">My Publications</a></li>
+																<li><a href="research.html" class="button large">My research</a></li>
+																<li><a href="cv.html" class="button large">My CV</a></li>
+															</ul>
+														</div>
 												</div>
 												<div class="col-3 col-6-medium col-12-small">
 											</div>
