--- a/research.html
+++ b/research.html
@@ -58,7 +58,7 @@
 
 											<section>
 												<a href="phd_research.html" class="image featured"><img src="images/DominiqueMaucieri_kelp.jpg" alt="" /></a>
-												<p>
+												<p style="text-align:center">
 													For my PhD I am working in the Bates lab at the University of Victoria, and I will be
 													focusing on how multiple stressors interact (e.g., marine heatwaves, deoxygenation
 													and human actions) and affect various aspects of coral and rocky reef communities.
@@ -109,7 +109,7 @@
 															<h3><a href="undergrad_research.html">Undergraduate Research</a></h3>
 															<p>
 																Thoughout my undergraduate degree, I had the opportunity to be involved in
-																many research projects though my courses and summer employment. 
+																many research projects though my courses and summer employment.
 															</p>
 														</section>
 
@@ -131,10 +131,35 @@
 										</div>
 									</section>
 
+
+					<!-- Advice -->
+					<section class="main">
+						<div class="container">
+							<div class="row gtr-200">
+								<div class="col-12">
+						<h2 class="major"><span>Advice to young scientists</span></h2>
+
+									<p style="text-align:center">My favorite part of my ecology degree is that every day in the field is
+										unique and there is always an exception to every rule. You never know what
+										you are going to find, how organisms will react or how environments will
+										change, so it keeps you on your toes and allows you to be creative and reflective.
+									</p>
+									<p style="text-align:center">For those looking to pursue a degree in biology, my advice is don’t
+										specialize too much. Take courses and do research that is in a broad
+										range of topics. It is all applicable and I often see students who only look at
+										one taxa or environment their whole degree end up very specialized and
+										fail to see all the connections between other taxa and environments.
+										Also, you don’t truly know if you like or hate something until you give it a try.
+									</p>
+								</div>
 							</div>
 						</div>
-					</div>
-				</section>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
