changing photo dimensions to percents

--- a/SASC_research.html
+++ b/SASC_research.html
@@ -180,7 +180,7 @@
 
                           <div class="mySlides fade">
                             <div class="numbertext">3 / 6</div>
-                            <img src="images/sasc/DominiqueMaucieri_SASC3.jpg" style="height:700px" class="center">
+                            <img src="images/sasc/DominiqueMaucieri_SASC3.jpg" style="width:60%" class="center">
                             <div class="text">Leopard catshark (<em>Poroderma pantherinum</em>) and I <br \>
 															- &copy; Dominique G. Maucieri</div>
                           </div>
@@ -193,14 +193,14 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">5 / 6</div>
-                            <img src="images/sasc/DominiqueMaucieri_SASC5.jpg" style="height:700px" class="center">
+                            <img src="images/sasc/DominiqueMaucieri_SASC5.jpg" style="width:70%" class="center">
                             <div class="text">Me and a leopard catshark (<em>Poroderma pantherinum</em>), the first shark <br \>
 														I caught (Hermanus, South Africa) - &copy; Aaron Judah</div>
                           </div>
 
 													<div class="mySlides fade">
                             <div class="numbertext">6 / 6</div>
-                            <img src="images/sasc/DominiqueMaucieri_SASC6.jpg" style="height:700px" class="center">
+                            <img src="images/sasc/DominiqueMaucieri_SASC6.jpg" style="width:50%" class="center">
                             <div class="text">Catshark eggs aka mermaids purses (South Africa) <br \ >
 															- &copy; Dominique G. Maucieri</div>
                           </div>
