--- a/bats_research.html
+++ b/bats_research.html
@@ -166,91 +166,91 @@
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
                             <div class="numbertext">1 / 13</div>
-                            <img src="images/bats/DominiqueMaucieri_bats1.jpg" style="height:800px" class="center">
+                            <img src="images/bats/DominiqueMaucieri_bats1.jpg" style="width:75%" class="center">
                             <div class="text">Little Brown bat (<em>Myotis lucifugus</em>) just hanging
 														out (Calgary, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext"> 2 / 13</div>
-                            <img src="images/bats/DominiqueMaucieri_bats2.jpg" style="height:600px" class="center">
+                            <img src="images/bats/DominiqueMaucieri_bats2.jpg" style="width:100%" class="center">
                             <div class="text">Thomas's fruit-eating bat (<em>Dermanura watsoni</em>) from Lamanai (Belize)
 														- &copy; Erica Born</div>
                           </div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 3 / 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats3.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats3.jpg" style="width:60%" class="center">
 														<div class="text">Great Fruit-eating bat (<em>Artibeus lituratus</em>) from
 														Lamanai (Belize) <br \> - &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 4/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats4.jpg" style="height:700px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats4.jpg" style="width:100%" class="center">
 														<div class="text">Jamaican fruit bat (<em>Artibeus jamacensis</em>) found at Kakabiche archiological site (Belize) <br \>
 														- &copy; Dominique G. Maucieri </div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 5/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats5.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats5.jpg" style="width:60%" class="center">
 														<div class="text">Proboscis bat (<em>Rhynchonycteris naso</em>) found roosting under the <br \>
 														dock (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 6/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats6.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats6.jpg" style="width:100%" class="center">
 														<div class="text">A shy Little Brown bat (<em>Myotis lucifugus</em>) caught in Calgary (Alberta) <br \>
 														- &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 7/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats7.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats7.jpg" style="width:70%" class="center">
 														<div class="text">Long-eared Myotis (<em>Myotis evotis</em>) from Kananaskis (Alberta) <br \>
 														- &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 8/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats8.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats8.jpg" style="width:70%" class="center">
 														<div class="text">Two Long-eared Myotis's (<em>Myotis evotis</em>) on my hand (Kananaskis, Alberta) <br \>
 														- &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 9 / 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats9.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats9.jpg" style="width:70%" class="center">
 														<div class="text">The Silver-haired bat (<em>Lasionycteris noctivagans</em>) my favorite <br \>
 														bat (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 10/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats10.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats10.jpg" style="width:60%" class="center">
 														<div class="text">Hoary bat's (<em>Lasiurus cinereus</em>) wing (Calgary, Alberta) <br \>
 														- &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 11/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats11.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats11.jpg" style="width:70%" class="center">
 														<div class="text">A Little Brown bat (<em>Myotis lucifugus</em>) and I (Calgary, Alberta) <br \>
 															- &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 12/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats12.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats12.jpg" style="width:70%" class="center">
 														<div class="text">A Little Brown bat (<em>Myotis lucifugus</em>) showing off their <br \>
 															teeth (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
 													</div>
 
 													<div class="mySlides fade">
 														<div class="numbertext"> 13/ 13</div>
-														<img src="images/bats/DominiqueMaucieri_bats13.jpg" style="height:800px" class="center">
+														<img src="images/bats/DominiqueMaucieri_bats13.jpg" style="width:70%" class="center">
 														<div class="text">Beautiful Big Brown bat (<em>Eptesicus fuscus</em>) caught using a <br \>
 														mist net (Calgary, Alberta) - &copy; Dominique G. Maucieri</div>
 													</div>
