--- a/masters_research.html
+++ b/masters_research.html
@@ -31,7 +31,7 @@
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
@@ -173,13 +173,13 @@
 
                           <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
-                            <img src="images/msc/DominiqueMaucieri_msc2.jpg" style="height:700px" class="center">
+                            <img src="images/msc/DominiqueMaucieri_msc2.jpg" style="width:50%" class="center">
                             <div class="text" style="color:black">Soft Corals on Kiritimati - &copy; Maucieri and Baum 2021</div>
                           </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext">3 / 3</div>
-                            <img src="images/msc/DominiqueMaucieri_msc3.jpg" style="height:700px" class="center"">
+                            <img src="images/msc/DominiqueMaucieri_msc3.jpg" style="width:50%" class="center"">
                             <div class="text">Me convocating - &copy; Dominique G. Maucieri</div>
                           </div>
 
