--- a/phd_research.html
+++ b/phd_research.html
@@ -174,7 +174,7 @@
 
                           <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
-                            <img src="images/phd/DominiqueMaucieri_phd2.jpg"  style="height:700px" class="center">
+                            <img src="images/phd/DominiqueMaucieri_phd2.jpg"  style="width:50%" class="center">
                             <div class="text">I'm smiling before a Reef Life Survey dive <br \>
 															in Bamfield (Canada) a- &copy; Valesca de Groot</div>
                           </div>
