--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 			<!-- Nav -->
 				<nav id="nav">
+					<span class="title">{{ MENU }}</span>
 					<ul>
 						<li class="current"><a href="index.html">About Me</a></li>
 						<li><a href="publications.html">Publications</a></li>
