--- a/undergrad_research.html
+++ b/undergrad_research.html
@@ -31,7 +31,7 @@
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
@@ -166,7 +166,7 @@
                           <!-- Full-width images with number and caption text -->
                           <div class="mySlides fade">
                             <div class="numbertext">1 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc2.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc2.jpg" style="width:70%" class="center">
                             <div class="text">Horned Lark (<em>Eremophila alpestris</em>) female (Smithers, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
@@ -178,27 +178,27 @@
 
                           <div class="mySlides fade">
                             <div class="numbertext">3 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc4.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc4.jpg" style="width:60%" class="center">
                             <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nestling and me (Smithers, Canada) <br \>
 														- &copy; Devin De Zwaan</div>
                           </div>
 
 													<div class="mySlides fade">
                             <div class="numbertext">4 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc5.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc5.jpg" style="width:70%" class="center">
                             <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nest (Smithers, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
 													<div class="mySlides fade">
                             <div class="numbertext">5 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc6.jpg" style="height:700px" class="center">
-                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) male caught with a bowline trap <br \>
+                            <img src="images/bsc/DominiqueMaucieri_bsc6.jpg" style="width:50%" class="center">
+                            <div class="text">Horned Lark (<em>Eremophila alpestris</em>) male caught with a bowline <br \> trap
 														(Smithers, Canada) - &copy; Dominique G. Maucieri</div>
                           </div>
 
 													<div class="mySlides fade">
                             <div class="numbertext">6 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc7.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc7.jpg" style="width:50%" class="center">
                             <div class="text">Horned Lark (<em>Eremophila alpestris</em>) nestlings (Smithers, Canada) <br \>
 															 - &copy; Dominique G. Maucieri</div>
                           </div>
@@ -211,7 +211,7 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">8 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc9.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc9.jpg" style="width:50%" class="center">
                             <div class="text">Three spined sticklebacks (<em>Gasterosteus aculeatus</em>) from <br \>
 															Barrier Lake (Kananaskis, Canada) = &copy; Dominique G. Maucieri</div>
                           </div>
@@ -269,7 +269,7 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">17 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc18.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc18.jpg" style="width:60%" class="center">
                             <div class="text">Feather boa kelp (<em>Egregia menziesii</em>) and muself (Bamfield, Canada) <br \>
 														- &copy; Hannah Avenant</div>
                           </div>
@@ -288,7 +288,7 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">20 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc21.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc21.jpg" style="width:50%" class="center">
                             <div class="text">The experimental streams at ACWA (Calgary, Canada) <br \>
 														- &copy; Dominique G. Maucieri</div>
                           </div>
@@ -301,7 +301,7 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">22 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc23.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc23.jpg" style="width:50%" class="center">
                             <div class="text">Scraping "rock scum" off of rocks at ACWA (Calgary, Canada)<br \>
 															- &copy; Dominique G. Maucieri</div>
                           </div>
@@ -334,7 +334,7 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">27 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc28.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc28.jpg" style="width:70%" class="center">
                             <div class="text">Scorpions are fluorescent (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
                           </div>
 
@@ -347,13 +347,13 @@
 
 													<div class="mySlides fade">
                             <div class="numbertext">29 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc30.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc30.jpg" style="width:70%" class="center">
                             <div class="text">The view from the lodge (Lamanai, Belize) - &copy; Dominique G. Maucieri</div>
                           </div>
 
 													<div class="mySlides fade">
                             <div class="numbertext">30 / 30</div>
-                            <img src="images/bsc/DominiqueMaucieri_bsc1.jpg" style="height:700px" class="center">
+                            <img src="images/bsc/DominiqueMaucieri_bsc1.jpg" style="width:70%" class="center">
                             <div class="text">Morelet's Crocodile (<em>Crocodylus moreletii</em>) we caught as <br \>
 														part of a capture-mark-recapture study (Lamanai, Belize) - &copy; Liam Horne</div>
                           </div>
