trying to fix undefined error

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div id="page-wrapper">
 
 			<!-- Nav -->
+			<div id="titleBar"><a href="#navPanel" class="toggle"></a><span class="title">MENU</span></div>
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">About Me</a></li>
