adding research interests

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
 																of the oceans and helping others to see ways that they can impact their oceans
 																for the better.
 															</p>
+															<h3><a href="#">Research Interests</a></h3>
+															<p>
+																My research interests primarily revolve around marine community ecology, specifically
+																coral and rocky/temperate reefs, though I
+																also have a love for coding and statistics. I love working with large data sets, as
+																well as cute, missunderstood taxa. In particular sharks and bats have been some of
+																my favorite animals to study and to teach people about.
+															</p>
 														</section>
 														<div class="col-12">
 															<ul class="actions">
